
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    tools:context="com.zenit.bryan.prestatec.Prestamos"
    android:weightSum="1"
    android:orientation="vertical">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/xbtnCancelarP"
            android:background="@drawable/cancelar"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_margin="20dp"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:id="@+id/xbtnAceptarP"
            android:layout_column="1"
            android:background="@drawable/aceptar"
            android:layout_row="0"
            android:layout_margin="20dp"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="53dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/fechaP"
            android:id="@+id/textView7"
            android:layout_column="0" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/xlblFecha"
                android:gravity="center"
                android:layout_column="1" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/observacion"
            android:id="@+id/textView5"
            android:layout_column="0" />

        <EditText
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/xtxtObservacion"
            android:layout_column="1" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="73dp"
        android:weightSum="1"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/entregado"
            android:id="@+id/textView6"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Pendiente"
            android:id="@+id/xlblEstado"
            android:layout_column="1"
            android:layout_weight="0.08"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="90dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/especificacion"
            android:id="@+id/textView4"
            android:layout_column="0" />

        <EditText
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/xtxtEspecificacion"
            android:layout_column="1" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="104dp"
        android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tipo"
                android:id="@+id/textView3"
                android:layout_column="0" />

            <Spinner
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/xSpTipo"
                android:layout_column="1"
                android:layout_weight="0.46" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="316dp">


        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/prestatario"
        android:id="@+id/textView2"
        android:layout_column="0" />

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/xSpPersona"
                android:layout_column="1" />

    </TableRow>

</LinearLayout>
